tests/ui/issues/issue-33941.current.stderr
error[E0271]: expected `Iter<'_, _, _>` to be an iterator that yields `&_`, but it yields `(&_, &_)`
  --> $DIR/issue-33941.rs:9:36
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |                                    ^^^^^^ expected `&_`, found `(&_, &_)`
   |
   = note: expected reference `&_`
                  found tuple `(&_, &_)`
note: the method call chain might not have had the expected associated types
  --> $DIR/issue-33941.rs:9:29
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |              -------------- ^^^^^^ `Iterator::Item` is `(&_, &_)` here
   |              |
   |              this expression has type `HashMap<_, _>`
note: required by a bound in `cloned`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL

error[E0271]: expected `Iter<'_, _, _>` to be an iterator that yields `&_`, but it yields `(&_, &_)`
  --> $DIR/issue-33941.rs:9:14
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `&_`, found `(&_, &_)`
   |
   = note: expected reference `&_`
                  found tuple `(&_, &_)`
   = note: required for `Cloned<std::collections::hash_map::Iter<'_, _, _>>` to implement `Iterator`
   = note: required for `Cloned<std::collections::hash_map::Iter<'_, _, _>>` to implement `IntoIterator`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0271`.
